# Fisherman

./: .gitignore  Cargo.toml  README.md
src/: commit_message.rs  config.rs  flags.rs  linter.rs  logger.rs  main.rs  pre_commit.rs  tester.rs
