[package]
name = "fisherman"
version = "0.1.0"
edition = "2021"
description = "A git hook manager for ensuring quality standards"
keywords = ["lint", "git", "hook"]
categories = ["developement-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
inquire = "0.7.4"
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
